components/page-level/notifications/index.module.css
.notifications {
  max-width: var(--container-lg);
  margin-left: auto;
  margin-right: auto;
}
.buttons {
  margin-bottom: 24px;
}

@media screen and (max-width: 1024px) and (min-width: 766px) {
  .notifications {
    padding: 24px;
    margin-top: 24px;
  }
  .notifications h1 {
    display: none;
  }
}

@media screen and (max-width: 766px) and (min-width: 360px) {
  .notifications h1 {
    display: none;
  }
  .notifications {
    margin-top: 20px;
    padding: 12px;
  }
}

